data/all_generated_tests/raw_wast_tests/call_indirect_IncorrectBranchTargetResolution_3934.wast
;; 3. **Valid Branch Target with Adequate Operand Handling**:    - Use a `call_indirect` Instruction where the branch target is correctly resolved and the number of operands is accurate.    - Checks for: Proper operand stack manipulation and branch target resolution consistency.

(assert_invalid
  (module
    (type $sig (func (param i32) (result i32)))
    (table 1 funcref)
    (func $fn (param i32) (result i32)
      local.get 0
    )
    (elem (i32.const 0) $fn)
    (func (param i32) (result i32)
      local.get 0
      call_indirect (type $sig)
    )
  )
  "type mismatch"
)